Updated Bottom container

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="profile">
       <img src="CSS - My Site Images/pranab_das.png" class="profile-pic" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I am an Engg. sophomore . I ❤️ watching Anime, Singing , travelling ,scribing <a href="https://www.instagram.com/pros_poetry/">poems</a> ,and some meantime chess
+      <p class="intro">I am an Engg. sophomore . I ❤️ watching Anime and in the meantime I sing , travel ,scribe <a href="https://www.instagram.com/pros_poetry/">poems</a> ,and play some chess
         too.
 
         <hr>
@@ -78,14 +78,14 @@
         <p>
           Title-Substantial Sentiments.
           <br>
-          I started writing poems at 8th grade and my style of writing is Ballads. I have an instagram page for my work.
+          I started writing poetry in 8th grade; sonnets and ballads being my favourite art of words . I have an instagram page for my work.
           Check it out <a href="https://www.instagram.com/pros_poetry"> <img src="CSS - My Site Images/insta.svg" alt="" class="ig"></a></img>
         </p>
       </div>
       <div class="skill-row">
         <img class="skill-pic" src="CSS - My Site Images/webdev.gif" alt="">
         <h3>Web Development & Design</h3>
-        <p>I started my coding journey when I was 14 with Java being my first language, advance C++ in highschool followed by full-stack Web_Dev basics in college.
+        <p>This journey started when I was 14 with Java as my first language.I wanted to make a charitable society for animals in the web which isnt completed yet .Time passed by and I've learnt advance C++ in highschool followed by full-stack Web_Dev basics in college(That was actually Udemy).
           Checkout my repos at <a href="https://github.com/pranab99"> <img src="CSS - My Site Images/github.png" alt="" class="gh"></a></img>
         </p>
       </div>
@@ -94,7 +94,7 @@
         <h3>Android Development</h3>
         <p>I have learnt Android Studio with Java from Internshala in the second year of college. I've acquired satisfactory skills here and undergoing some projects.
           <br>
-          Honestly I've made only two projects in this area and its on a hold till I complete my WebDev.
+          Honestly I've made only two projects in this area(one of them being a "Firebase" implimentation) and its on a hold till I complete  my Web Development Projects.
         </p>
 
       </div>
@@ -104,7 +104,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you want to collab or want to share something.</h3>
-      <p class="contact-messege">Feel free to ping me as I surely can lend some time. I wont judge ,I'm just a good listener.I'm not a pro but we can even code or play chess together if you have some interest.  </p>
+      <p class="contact-messege">Feel free to ping me. To be honest ,I personally cannot bring myself to reach out people who I do not know much, particularly people who mention "feel free to reach" XDXD. No one in my close friend circle has to say this and I always reach out and have been reached out by them.However,it does'nt matter if you know me or not as I'm always available to lend an ear .I'm not a pro but we can even code or play chess together if you have some interest.  </p>
       <a class="btn" href="mailto:impranabdas99@gmail.com">CONTACT ME</a>
     </div>
 
