--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you want to collab or want to share something.</h3>
-      <p class="contact-messege">Feel free to ping me. To be honest ,I personally cannot bring myself to reach out people who I do not know much, particularly people who mention "feel free to reach" XDXD. No one in my close friend circle has to say this and I always reach out and have been reached out by them.However,it does'nt matter if you know me or not as I'm always available to lend an ear .I'm not a pro but we can even code or play chess together if you have some interest.  </p>
+      <p class="contact-messege">Feel free to ping me. To be honest ,I personally cannot bring myself to reach out people who I do not know much, particularly people who mention "feel free to reach" XDXD. No one in my close friend circle has to say this and I always reach out and have been reached out by them.However,it doesn't matter if you know me or not, I'm always available to lend an ear .I'm not a pro but we can even code or play chess together if you have some interest.  </p>
       <a class="btn" href="mailto:impranabdas99@gmail.com">CONTACT ME</a>
     </div>
 
