--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>
           Title-Substantial Sentiments.
           <br>
-          I started writing poetry in 8th grade; sonnets and ballads being my favourite art of words . I have an instagram page for my work.
+          I started writing poetry in 8th grade; sonnets and ballads being my favourite art of words . I have an instagram page for my work.<br>
           Check it out <a href="https://www.instagram.com/pros_poetry"> <img src="CSS - My Site Images/insta.svg" alt="" class="ig"></a></img>
         </p>
       </div>
