--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="profile">
       <img src="CSS - My Site Images/pranab_das.png" class="profile-pic" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I am an Engg. sophomore . I ❤️ watching Anime and in the meantime I sing , travel ,scribe <a href="https://www.instagram.com/pros_poetry/">poems</a> ,and play some chess
+      <p class="intro">I am an Engg. middler . I ❤️ watching Anime and in the meantime I sing , travel ,scribe <a href="https://www.instagram.com/pros_poetry/">poems</a> ,and play some chess
         too.
 
         <hr>
